# galaxy_classification_guide

./: .gitignore  README.md  galaxy_classification_guide.code-workspace  galaxy_classification_guide.md  main.py  pyproject.toml
input/: resnet50 training metrics.csv
input/queries/: DATA7901_DR19_casjobs.sql  DATA7901_DR19_casjobs_photo.sql  DATA7901_DR19_casjobs_photoz.sql  DATA7901_DR19_casjobs_spectra.sql
input/spectra/: spec-0266-51630-0168.fits  spec-0266-51630-0215.fits  spec-0266-51630-0367.fits  spec-0266-51630-0481.fits  spec-0266-51630-0486.fits  spec-0266-51630-0598.fits  spec-0267-51608-0413.fits  spec-0268-51633-0074.fits  spec-0268-51633-0223.fits  spec-0268-51633-0251.fits
notebooks/: explore_tables.ipynb  explore_tables_new.ipynb  galaxy_dataset.py
quarto/proposal/: DATA7901.bib  add_logo_to_title_page.tex  proposal.qmd  proposal_final.qmd
