[project]
name = "galaxy-classification-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.1.0",
    "astroquery>=0.4.10",
    "duckdb>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "orbital>=0.2.2",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "sdssdb>=0.13.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=1.4.54",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "umap>=0.1.1",
]
